EDA on MLB batted ball data - final version

--- a/MLB EDA Proj/EDA-Prez.html
+++ b/MLB EDA Proj/EDA-Prez.html
@@ -188,15 +188,15 @@ name: events
 
 &lt;img src="EDA-Prez_files/figure-html/hand_props-1.png" width="75%" style="display: block; margin: auto;" /&gt;
 --
-**&gt; Left-handed batters get on base more often **
+**&gt; Right-handed batters get on base more often **
 
 --
 
-**&gt; Left-handed batters get out less often **
+**&gt; Left-handed batters get out more often **
 
 --
 
-**&gt; Right-handed batters hit more homeruns**
+**&gt; Left-handed batters hit more homeruns**
 
 [***](#signf)
 
@@ -228,9 +228,7 @@ name: next
 
 
 
-&lt;img src="EDA-Prez_files/figure-html/k-means-1.png" width="40%" style="display: block; margin: auto;" /&gt;
-
-&lt;img src="EDA-Prez_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDA-Prez_files/figure-html/k-means-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -252,15 +250,15 @@ name: next
 
 class: inverse center middle
 
-&lt;img src="EDA-Prez_files/figure-html/unnamed-chunk-4-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDA-Prez_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 ---
 
-### Strongest batters
+### Cluster 3
 
 &lt;table&gt;
  &lt;thead&gt;
   &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; best_batters &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Strongest Batters: &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
@@ -315,16 +313,19 @@ class: inverse center middle
 - Batted balls from left-handed vs right-handed batters do differ (marginally significant)
   
 - The probability of a pitch being thrown is not constant throughout an at bat
-      - The only type of pitch thrown during a 3-0 count is a fastball
+  
 --
 
 ### Limitations
 
-- Relatively small dataset, only 3 months into the season
+- Small dataset (less than 2 weeks of games)
 
 - Team names are not included in the dataset
 
-- Next steps: analyzing scores/results depending on batted balls, modeling
+- Next steps: 
+  - analyzing scores/results depending on batted balls
+  - effects of shifts
+  - future modeling
 
 ---
 
